feat: add optimized avatar/cover uploads with previews

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,9 @@ UPLOAD_MAX_FILE_BYTES_PRO=524288000
 UPLOAD_MAX_DATASET_BYTES_FREE=524288000
 UPLOAD_MAX_DATASET_BYTES_PRO=5368709120
 
+# Image upload limits (bytes)
+UPLOAD_MAX_IMAGE_BYTES=10485760
+
 # Stripe (test mode)
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
