--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.71.1",
     "sonner": "^2.0.7",
     "stripe": "^20.3.1",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
   },
