--- a/.env.example
+++ b/.env.example
@@ -25,8 +25,9 @@ S3_FORCE_PATH_STYLE=true
 # RUNPOD_API_KEY=...
 # RUNPOD_ENDPOINT_ID=...
 
-# MVSEP (stem separation)
-# MVSEP_API_TOKEN=...
+# Cover engine (new AI Cover pipeline dispatcher)
+# COVER_ENGINE_URL=
+# COVER_ENGINE_TOKEN=
 
 # Upload limits (bytes)
 UPLOAD_MAX_FILE_BYTES_FREE=104857600
