--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.4",
+    "ffmpeg-static": "^5.3.0",
     "lru-cache": "^11.2.5",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
@@ -37,9 +38,9 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "sharp": "^0.33.5",
     "sonner": "^2.0.7",
     "stripe": "^20.3.1",
-    "sharp": "^0.33.5",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
   },
