--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sonner": "^2.0.7",
     "stripe": "^20.3.1",
     "tailwind-merge": "^3.4.0",
+    "yazl": "^3.3.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -49,6 +50,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/yazl": "^3.3.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "prisma": "^6.5.0",
